# halprog

./: CMakeLists.txt  main.cpp  main_hf0227.cpp  main_hf0306.cpp  main_hf0313.cpp  models.h
beadando/: CMakeLists.txt  description  distr.h  graph.h  main.cpp  models.h  statistics.h
gyak03/: hf szöveg
gyak0313/: CMakeLists.txt  feladat  main.cpp  vector2.h
gyakhf0220/: main.cpp  main_hf0220.cpp
hf0320/: CMakeLists.txt  main.cpp  matrix.h  test.cpp
hf_idomeres/: Mszorzás idők.ipynb  desc  main.cpp  timeOfMulti.cpp
hf_linreg/: desc  main.cpp
